force-app/main/default/objects/Gong__Gong_Scorecard__c/Gong__Gong_Scorecard__c.object-meta.xml
<CustomObject>
    <label>Gong Scorecard</label>
    <nameField>
        <displayFormat>Gong Scorecard{0000000}</displayFormat>
        <label>Gong Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gong Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>