force-app/main/default/objects/Gong__Gong_Scorecard__c/fields/Gong__Scorecard_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Gong__Scorecard_Call_Date__c</fullName>
    <label>Call date</label>
    <type>DateTime</type>
</CustomField>