force-app/main/default/objects/Gong__Gong_Scorecard__c/fields/Gong__Scorecard_Full_Question__c.field-meta.xml
<CustomField>
    <fullName>Gong__Scorecard_Full_Question__c</fullName>
    <label>Full question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>