force-app/main/default/objects/Gong__Gong_Scorecard__c/fields/Gong__Scorecard_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Gong__Scorecard_Visibility__c</fullName>
    <label>Visibility</label>
    <type>TextArea</type>
</CustomField>